[tool.poetry]
name = "wireguy"
version = "0.1.0"
description = "kek"
authors = ["critbit <js@vcc.earth>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
peewee = "^3.14.4"
Flask-Cors = "^3.0.10"
Flask-Login = "^0.5.0"
Authlib = "^0.15.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
